--- a/Harriet Woodwork/Harriet styles.css
+++ b/Harriet Woodwork/Harriet styles.css
@@ -1,70 +1,110 @@
 
+
 body{
-    margin: 0px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    
+    background-image: url(wood\ brown\ light.jpg);
+    background-position: center;
+    background-size: cover;
 }
 
 header{
-    background-color: #1c8e08;
+    margin-bottom: 10px;
 }
 
-.Brand img{
-    background-color: #1c8e08;
-    margin-top: 10px;
-    width: 100px;
+nav{
+    
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: gray;
+    border-bottom: 1px solid black;
+}
+
+nav .logo{
+    padding: 20px 20px;
+    height: 100px;
     float: left;
+    font-size: 45px;
+    font-weight: bold;
+    color: black;
+
+
 }
 
-.Brand h1{
-    font-size: 50px;
-    position: relative;
-    top: 25px;
+
+nav ul{
+    list-style: none;
+    float: right;
+    margin: 0;
+    padding: 0;
+    display: flex;
+
 }
 
-
-.navbar ul{
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    overflow: hidden;
-}
-
-.navbar a{
-    color: #fff;
+nav ul li a{
+    line-height: 80px;
+    color: black;
+    padding: 12px 30px;
     text-decoration: none;
-    padding: 15px;
-    display: block;
-    text-align: center;
-}
-
-.navbar a:hover{
-    color: brown;
-}
-
-.navbar li{
-    float: left;
     font-size: 20px;
+    font-weight: bold;
+    text-transform: uppercase;
+
+}
+
+nav ul li a:hover{
+    background: rgba(255, 255, 255, 0.845);
+    border-radius: 6px;
+
+}
+
+
+
+
+.HomeImage{
+    margin-left: 100px;
+    
+}
+
+.HomeImage img{
+    width: 90%;
+    height: 550px;
 }
 
 .about{
-    font-size: 20px;
+    color: black;
+    font-size: 25px;
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
 }
 
-section {
-    padding: 40px 0;
-}
-
-section h2 {
-    margin-bottom: 20px;
-}
-
 h2{
     font-size: 40px;
     text-align: center;
-    padding-bottom: 15px;
+    padding-bottom: 0px;
 }
+
+.Gallery{
+    margin-left: 120px;
+}
+
+.Gallery img{
+    width: 400px;
+    height: 400px;
+    padding: 10px;
+    border-color: black;
+    border-width: 10px;
+    border-radius: 5px;
+}
+
 
 input{
     background-color: white;
@@ -106,7 +146,9 @@ button:hover{
 }
 
 footer {
-    background-color: #1c8e08;
+    background: gray;
+    border-top: 1px solid black;
     text-align: center;
     padding: 10px 0;
+    margin-top: 15px;
 }
